[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Hustlersroughdemo-6OM1.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://SaveLoadGame/SaveLoadGame.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 200
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 1 )

[node name="SaveLoadGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TransparentPanel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
margin_right = 1920.0
margin_bottom = 1080.0

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_top = -23.0
margin_right = 1918.0
margin_bottom = 168.0
theme = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]SAVES[/center]"
text = "SAVES"
scroll_active = false

[node name="Row1" type="Control" parent="."]
margin_top = 150.0
margin_right = 1920.0
margin_bottom = 392.0

[node name="Panel1" type="Panel" parent="Row1"]
margin_left = 40.0
margin_right = 470.0
margin_bottom = 241.0

[node name="Panel2" type="Panel" parent="Row1"]
margin_left = 510.0
margin_right = 940.0
margin_bottom = 241.0

[node name="Panel3" type="Panel" parent="Row1"]
margin_left = 980.0
margin_right = 1410.0
margin_bottom = 241.0

[node name="Panel4" type="Panel" parent="Row1"]
margin_left = 1450.0
margin_right = 1880.0
margin_bottom = 241.0

[node name="Texture1" type="TextureRect" parent="Row1"]
margin_left = 43.0
margin_right = 471.0
margin_bottom = 242.0

[node name="Texture2" type="TextureRect" parent="Row1"]
margin_left = 514.0
margin_top = 33.0
margin_right = 942.0
margin_bottom = 33.0

[node name="Texture3" type="TextureRect" parent="Row1"]
margin_left = 980.0
margin_right = 1408.0
margin_bottom = 242.0

[node name="Texture4" type="TextureRect" parent="Row1"]
margin_left = 1454.0
margin_right = 1882.0
margin_bottom = 242.0

[node name="Row2" type="Control" parent="."]
margin_top = 425.0
margin_right = 1920.0
margin_bottom = 667.0

[node name="Panel1" type="Panel" parent="Row2"]
margin_left = 40.0
margin_right = 470.0
margin_bottom = 241.0

[node name="Panel2" type="Panel" parent="Row2"]
margin_left = 510.0
margin_right = 940.0
margin_bottom = 241.0

[node name="Panel3" type="Panel" parent="Row2"]
margin_left = 980.0
margin_right = 1410.0
margin_bottom = 241.0

[node name="Panel4" type="Panel" parent="Row2"]
margin_left = 1450.0
margin_right = 1880.0
margin_bottom = 241.0

[node name="Texture1" type="TextureRect" parent="Row2"]
margin_left = 43.0
margin_right = 471.0
margin_bottom = 242.0

[node name="Texture2" type="TextureRect" parent="Row2"]
margin_left = 514.0
margin_top = 33.0
margin_right = 942.0
margin_bottom = 33.0

[node name="Texture3" type="TextureRect" parent="Row2"]
margin_left = 980.0
margin_right = 1408.0
margin_bottom = 242.0

[node name="Texture4" type="TextureRect" parent="Row2"]
margin_left = 1454.0
margin_right = 1882.0
margin_bottom = 242.0

[node name="Row3" type="Control" parent="."]
margin_top = 700.0
margin_right = 1920.0
margin_bottom = 942.0

[node name="Panel1" type="Panel" parent="Row3"]
margin_left = 40.0
margin_right = 470.0
margin_bottom = 241.0

[node name="Panel2" type="Panel" parent="Row3"]
margin_left = 510.0
margin_right = 940.0
margin_bottom = 241.0

[node name="Panel3" type="Panel" parent="Row3"]
margin_left = 980.0
margin_right = 1410.0
margin_bottom = 241.0

[node name="Panel4" type="Panel" parent="Row3"]
margin_left = 1450.0
margin_right = 1880.0
margin_bottom = 241.0

[node name="Texture1" type="TextureRect" parent="Row3"]
margin_left = 43.0
margin_right = 471.0
margin_bottom = 242.0

[node name="Texture2" type="TextureRect" parent="Row3"]
margin_left = 514.0
margin_top = 33.0
margin_right = 942.0
margin_bottom = 33.0

[node name="Texture3" type="TextureRect" parent="Row3"]
margin_left = 980.0
margin_right = 1408.0
margin_bottom = 242.0

[node name="Texture4" type="TextureRect" parent="Row3"]
margin_left = 1454.0
margin_right = 1882.0
margin_bottom = 242.0

[node name="LoadButton" type="Button" parent="."]
margin_left = 238.0
margin_top = 970.0
margin_right = 749.0
margin_bottom = 1048.0

[node name="RichTextLabel" type="RichTextLabel" parent="LoadButton"]
margin_right = 510.0
margin_bottom = 81.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]LOAD[/center]"
text = "LOAD"

[node name="SaveButton" type="Button" parent="."]
margin_left = 1173.0
margin_top = 970.0
margin_right = 1684.0
margin_bottom = 1048.0

[node name="RichTextLabel" type="RichTextLabel" parent="SaveButton"]
margin_right = 510.0
margin_bottom = 81.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]SAVE[/center]"
text = "SAVE"

[connection signal="pressed" from="LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
